--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pandas = ">=1.3.0"
 numpy = ">=1.10"
 tqdm = "^4.65.0"
 progressbar = "^2.5"
+networkx = ">=2.8.4"
+pyvis = ">=0.3.2"
 
 
 [build-system]
