small updates and results files cleaning

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,14 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.7,<3.10"
-dexom-python = "^1.0"
+dexom-python = ">=1.0"
 tqdm = "^4.65.0"
 progressbar = "^2.5"
 networkx = ">=2.8.4"
 pyvis = ">=0.3.2"
 xlsxwriter = ">=3.1.0"
 jproperties = ">=2.1.1"
+jupyterlab = ">=4.0"
 
 
 [build-system]
