--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ pyvis = ">=0.3.2"
 xlsxwriter = ">=3.1.0"
 jproperties = ">=2.1.1"
 jupyterlab = ">=4.0"
-
+pandas = "<=1.5.0"
+numpy = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core"]
