prep for pypi publication

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "mana"
+name = "manamodeller"
 version = "0.1.0"
 description = ""
 authors = ["Louison Fresnais <fresnaislouison@gmail.com>"]
