--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -29,4 +29,5 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
-  requirements: docs/doc_requirements.txt
+    - requirements: docs/doc_requirements.txt
+    - method: pip
