--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -29,6 +29,9 @@ sphinx:
 # to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
+  version: "3.7"
   install:
     - requirements: docs/doc_requirements.txt
     - method: pip
+      path: .
+  system_packages: true
