--- a/props.properties
+++ b/props.properties
@@ -1,6 +1,6 @@
 ### General parameters ###
 
-#working_path=~/work/MANA/tests/
+working_path=tests/
 #table files must be provided in the tsv format (delimiter = tabulation)
 data=tests/input_data/test_dataset.tsv
 pheno=tests/input_data/pheno_annotated.tsv
@@ -8,7 +8,7 @@ modelFile=tests/input_data/recon2v2_biomass_corrected.json
 rListFile=tests/input_data/recon2_2_reactions.csv
 #compounds must be separated with a /
 cpds=amiodarone
-mappingFile=/input_data/hgnc_custom_set.txt
+mappingFile=tests/input_data/hgnc_custom_set.txt
 modelId=recon2.2
 dose=Control
 time=24 hr
